--- a/index.html
+++ b/index.html
@@ -220,5 +220,112 @@
         <img src="./images/abddddd_Mesa de trabajo 1.jpg" style="width: 95%;" class="advertisement">
     </div>
 
+    <div class="brand-shop" id="abcdd">
+        <h2>Ain't Nobody Like my Desi Girl</h2>
+    </div>
+     
+    <div class="product-container">
+        <div class="product-card">
+            <img src="./images/kurti-1.jpg" alt="Womens Black Casual Abstract Dress">
+            <p>Women's Traditional Maroon Kurti</p>
+            <h3>₹15,490</h3>
+        </div>
+        <div class="product-card">
+            <img src="./images/kurti-2.jpg" alt="Womens Work Geometric Top">
+            <p>Women's Traditional Blue Kurti</p>
+            <h3>₹13,990</h3>
+        </div>
+        <div class="product-card">
+            <img src="./images/kurti-3.jpg" alt="Womens Work Abstract Top">
+            <p>Women's Traditional Magenta Kurti</p>
+            <h3>₹12,690</h3>
+        </div>
+        <div class="product-card">
+            <img src="./images/kurti-4.jpg" alt="Womens Rust Work Solid Co-ords">
+            <p>Women's Traditional Kurti</p>
+            <h3>₹17,990</h3>
+        </div>
+        <div class="product-card sale">
+            <span class="sale-badge">Sale</span>
+            <img src="./images/kurti-5.jpg" alt="Womens White Casual Solid Top">
+            <p>Women's Brown Traditional Kurti'</p>
+            <h3>₹6,245 <span class="original-price">₹12,490</span> <span class="discount">(50% OFF)</span></h3>
+        </div>
+    </div>
+
+    <div class="brand-shop" id="abcdd">
+        <h2>Browse by Category</h2>
+    </div>
+
+    <div class="product-container">
+        <div class="product-card">
+            <img src="./images/Strength_Heavyweight_Oversized_Tee_Jade.jpg" alt="Womens Black Casual Abstract Dress">
+            <p>Oversized Tshirt</p>
+        </div>
+        <div class="product-card">
+            <img src="./images/Casual-tshirt.jpg" alt="Womens Work Geometric Top">
+            <p>Casual Tshirts</p>
+        </div>
+        <div class="product-card">
+            <img src="./images/Casual Shirt.jpg" alt="Womens Work Abstract Top">
+            <p>Casual Shirts</p>
+        </div>
+        <div class="product-card">
+            <img src="./images/Formal Shirt.jpg" alt="Womens Rust Work Solid Co-ords">
+            <p>Formal Shirt</p>
+        </div>
+        <div class="product-card sale">
+            <img src="./images/bottomwear.jpg" alt="Womens White Casual Solid Top">
+            <p>Bottomwear</p>
+        </div>
+    </div>
+
+    <div>
+        <img src="./images/theme-image-1738952816186.jpg" style="width: 95%;" class="advertisement">
+    </div>
+
+    <div class="brand-shop" id="abcdd">
+        <h2>Fashionable Menswear in 30 Minutes</h2>
+    </div>
+
+    <div class="product-container">
+        <div class="product-card">
+            <img src="./images/jeans-1.jpg" alt="Womens Black Casual Abstract Dress">
+            <p>Men Baggy Tapered Fit Jeans</p>
+            <h3>₹1,199</h3>
+        </div>
+        <div class="product-card">
+            <img src="./images/jeans-2.jpg" alt="Womens Work Geometric Top">
+            <p>Men Steel Relaxed Fit Jeans</p>
+            <h3>₹990</h3>
+        </div>
+        <div class="product-card">
+            <img src="./images/jeans-3.jpg" alt="Womens Work Abstract Top">
+            <p>Men Rust Relaxed Fit Jeans</p>
+            <h3>₹1599</h3>
+        </div>
+        <div class="product-card">
+            <img src="./images/jeans-4.jpg" alt="Womens Rust Work Solid Co-ords">
+            <p>Men White Baggy Tapered Fit Textured Joggers</p>
+            <h3>₹1,990</h3>
+        </div>
+        <div class="product-card sale">
+            <span class="sale-badge">Sale</span>
+            <img src="./images/jeans-5.jpg" alt="Womens White Casual Solid Top">
+            <p>Men Coffee Brown Relaxed Fit Solid Cargos</p>
+            <h3>₹799</h3>
+        </div>
+    </div>
+
+    <div>
+        <img src="./images/theme-2.jpg" style="width: 95%;" class="advertisement">
+    </div>
+
+
+
+
+    <div>
+        <img src="./images/App promo flyer - Made with PosterMyWall.jpg" style="width: 95%;" class="advertisement">
+    </div>
 </body>
 </html>
